--- a/Lab01_v2.Rmd
+++ b/Lab01_v2.Rmd
@@ -15,3 +15,28 @@ library(sf)
 library(tidyverse)
 ```
 
+```{r}
+boulder <- st_read("C:/Users/seank/OneDrive/Desktop/Fall 2024/Lab01_CloneRepository/Lab 01 - Advanced GeoVis/Boulder_Data")
+
+boulder
+```
+```{r}
+ggplot() +
+    geom_sf(data =boulder,
+    fill = NA, alpha = .2) +
+    theme_bw()
+```
+```{r}
+boulder = st_transform(boulder, 26753) 
+ggplot() +
+    geom_sf(data =boulder,
+    fill = NA, alpha = .2) +
+    theme_bw()
+```
+```{r}
+ggplot() +
+    geom_sf(data =boulder, aes(color=PT_Elev),
+    fill = NA, alpha = .2) +
+    theme_bw()
+```
+
