--- a/Lab01_v2.Rmd
+++ b/Lab01_v2.Rmd
@@ -39,4 +39,70 @@ ggplot() +
     fill = NA, alpha = .2) +
     theme_bw()
 ```
+```{r}
+ggplot() +
+    geom_sf(data =boulder, aes(color=PT_Elev),
+    fill = NA, alpha = .2) +
+  scale_colour_gradientn(colours = terrain.colors(10)) +  
+  theme_bw()
+```
+```{r}
+library(dplyr)
+boulder %>%
+    mutate(high_elev = ifelse(PT_Elev >= 2200, TRUE, FALSE))%>% 
+ggplot() +
+  geom_sf(aes(color=high_elev),
+    fill = NA, alpha = .2)  +  
+  theme_bw()
+```
+```{r}
+boulder %>%
+  filter(DB ==  'Pano' | DB == 'Flickr') %>%
+  ggplot(aes(x=DB, y=Street_dis)) + 
+  geom_boxplot()
+```
+```{r}
+library(sf)
+library(ggspatial)
+library(viridis)
+```
+```{r}
+magma(10)
+```
+```{r}
+ggplot() +
+    geom_sf(data = boulder, aes(color=PT_Elev),
+    fill = NA, alpha = .2) + 
+    scale_colour_gradientn(colours = magma(10))
+```
+```{r}
+summary(boulder$DB)
+```
+```{r}
+p <- ggplot() +
+  annotation_spatial(boulder) +
+  layer_spatial(boulder, aes(col = DB))
+p + scale_color_brewer(palette = "Dark2")
+```
+```{r}
+library(tmap)
+```
+
+```{r}
+## Add the data - these are specific to the vector or raster
+tm_shape(boulder) + 
+  ## which variable, is there a class interval, palette, and other options
+  tm_symbols(col='PT_Elev', 
+             fill.scale = tm_scale('quantile'), 
+             values = 'yl_or_rd',
+             border.lwd = NA,
+             size = 0.1)
+```
+```{r}
+## here we are using a simple dataset of the world 
+# tmap_mode("plot")
+data("World")
+tm_shape(World) +
+    tm_polygons("gdp_cap_est", style='quantile', legend.title = "GDP Per Capita Estimate")
+```
 
